# FOXAINATIVE

./: .dockerignore  .env.example  .env.production.example  .env.uat  .gitignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.uat.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/chatbot-service/: .dockerignore  .env.example  Dockerfile  Dockerfile.migration  README.md  main.py  package.json  pyproject.toml
apps/chatbot-service/api/helpers/: chatbot_resolver.py  exception_handler.py  middlewares.py
apps/chatbot-service/api/routers/: chatbot_routers.py
apps/chatbot-service/app/: __init__.py
apps/chatbot-service/app/conversations/: __init__.py  create_conversation.py  delete_conversation.py  export_conversation.py  get_conversation.py  update_conversation.py
apps/chatbot-service/app/dashboard/: __init__.py  metrics.py
apps/chatbot-service/app/files/: __init__.py  upload_file.py
apps/chatbot-service/app/messages/: __init__.py  delete_message.py  get_message.py
apps/chatbot-service/app/orchestrator/: __init__.py  agentic.py  facebook.py  facebook_tmp.py  whatsapp.py
apps/chatbot-service/domain/db_service/: __init__.py
apps/chatbot-service/domain/document_processor/: __init__.py  file_processing_service.py  markitdown_service.py
apps/chatbot-service/domain/llm_services/: __init__.py  prompts.py  title_generation_service.py  tts_streaming.py
apps/chatbot-service/domain/storage_services/: __init__.py  qdrant_service.py
apps/chatbot-service/infrastructure/embedding/: embedding.py
apps/chatbot-service/infrastructure/llm/: __init__.py  llm.py
apps/chatbot-service/infrastructure/llm_vision/: __init__.py  llm_vision.py
apps/chatbot-service/infrastructure/memory/: __init__.py  checkpointer_factory.py  mem0_factory.py  mem0_service.py  memory_checkpointer.py  redis_checkpointer.py
apps/chatbot-service/joint/logging/: logger.py
apps/chatbot-service/joint/minio_storage/: __init__.py  minio_service.py
apps/chatbot-service/joint/postgres/: __init__.py  models.py
apps/chatbot-service/joint/redis_storage/: __init__.py  redis_service.py
apps/chatbot-service/joint/settings/: defaults.py  settings.py
apps/chatbot-service/joint/utils/: __init__.py  api_client.py  async_helpers.py  create_dynamic_model.py  create_dynamic_tool.py  create_tool.py  files_utils.py  get_settings.py  get_time.py  handle_tool_error.py  message_cleaner.py  message_converter.py  message_processing_utils.py  summarization_utils.py  system_modules.py  time_measure.py  token_counter.py  validate_info.py
apps/chatbot-service/scripts/: run_migration.sh
apps/chatbot-service/src/: app.module.ts  main.ts
apps/index-service/: .env.example  Dockerfile  README.md  __init__.py  alembic.ini  main.py  pyproject.toml
apps/index-service/app/: __init__.py
apps/index-service/infrastructure/: __init__.py
apps/index-service/joint/: __init__.py
apps/index-service/scripts/: run_migration.sh
(+979 files in other folders)
