[project]
name = "query"
version = "1.0.0"
description = "Query flow service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "alembic==1.16.4",
    "asgi-correlation-id==4.3.4",
    "bcrypt==4.0.1",
    "fastapi==0.115.12",
    "fastmcp>=2.12.5",
    "google-genai>=1.60.0",
    "langchain==0.3.27",
    "langchain-anthropic==0.3.17",
    "langfuse>=3.0.0,<4.0.0",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-google-genai==2.1.7",
    "langchain-mcp-adapters==0.1.9",
    "langchain-openai==0.3.28",
    "langchain-qdrant==0.2.0",
    "langdetect==1.0.9",
    "langgraph==0.2.74",
    "langgraph-checkpoint>=2.0.23",
    "langgraph-checkpoint-redis>=0.1.3",
    "markitdown[all]==0.1.1",
    "mcp==1.14.0",
    "mem0ai>=1.0.4",
    "minio==7.2.16",
    "msal>=1.30.0",
    "openai==1.98.0",
    "openpyxl>=3.1.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.2.5",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pymupdf==1.25.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.18",
    "pytz>=2024.1",
    "pyyaml==6.0.2",
    "qdrant-client==1.15.0",
    "rank-bm25==0.2.2",
    "redis>=5.2,<6.0",
    "requests==2.32.4",
    "rich==14.1.0",
    "setuptools>=80.10.1",
    "sqlalchemy==2.0.42",
    "sse-starlette==1.8.2",
    "structlog==25.4.0",
    "uvicorn[standard]==0.34.2",
    "voyageai==0.2.4",
]
