[project]
name = "index"
version = "0.1.0"
description = "Index service for document processing and storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.16.4",
    "asgi-correlation-id==4.3.4",
    "bcrypt==4.0.1",
    "fastapi==0.115.12",
    "google-genai>=1.60.0",
    "httpx==0.28.1",
    "langchain==0.3.27",
    "langchain-anthropic==0.3.17",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-google-genai==2.1.7",
    "langchain-openai==0.3.28",
    "langchain-qdrant==0.2.0",
    "langchain-text-splitters==0.3.9",
    "markdown==3.8.2",
    "markitdown[all]==0.1.1",
    "minio==7.2.16",
    "redis==5.0.8",
    "numpy==2.3.2",
    "openai==1.98.0",
    "openpyxl>=3.0.0",
    "pandas==2.3.1",
    "passlib[bcrypt]==1.7.4",
    "pillow==11.3.0",
    "psutil==5.9.8",
    "psycopg[binary]==3.2.5",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pymupdf==1.25.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.18",
    "pytz==2022.7.1",
    "pyyaml==6.0.2",
    "qdrant-client==1.15.0",
    "requests==2.32.4",
    "sqlalchemy==2.0.42",
    "structlog==25.4.0",
    "uvicorn[standard]==0.34.2",
    "voyageai==0.2.4",
    "xlrd>=2.0.1",
]
